--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "private": true,
   "version": "0.0.1",
   "description": "Stencil App Starter",
+  "homepage": "https://thunderdev-community.github.io/capture-page/",
   "scripts": {
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d www"
   },
   "dependencies": {
     "@stencil/core": "^1.3.3",
-    "@stencil/router": "^1.0.1"
+    "@stencil/router": "^1.0.1",
+    "gh-pages": "^2.1.1"
   },
   "license": "MIT"
 }
