--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d www"
+    "predeploy": "npm run build"
   },
   "dependencies": {
-    "@stencil/core": "^1.3.3",
-    "@stencil/router": "^1.0.1",
-    "gh-pages": "^2.1.1"
+    "@stencil/core": "1.8.1",
+    "@stencil/router": "^1.0.1"
   },
   "license": "MIT"
 }
